# webscrapping

./: .env  README.md  app.py  products.json  pyproject.toml  serializer.py  simple_scrapping.py
common/: db_manager.py  notification_manager.py
config/: __init__.py  connections.py  db.py  settings.py
scrape/: action.py  helper.py  products.json  router.py  serializer.py  views.py
