[tool.poetry]
name = "webscrapping"
version = "0.1.0"
description = "Poetry setup for webscrapping"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
