[tool.poetry]
name = "webscrapping"
version = "0.1.0"
description = "Poetry setup for webscrapping"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
marshmallow = "^3.23.0"
motor = "^3.6.0"
pydantic-settings = "^2.6.0"
redis = "^5.2.0"
httpx = "^0.27.2"
tenacity = "^9.0.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
